--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,9 +1,21 @@
 <mat-toolbar color="primary">
     <mat-list class="list">
         <mat-list-item>
-            <a routerLink="/" routerLinkActive="green" class="list-item" >
+            <a routerLink="/" routerLinkActive="green" class="list-item" [routerLinkActiveOptions]="{ exact: true }">
                 <mat-icon class="icon">home</mat-icon>
                 Home
+            </a>
+        </mat-list-item>
+        <mat-list-item>
+            <a routerLink="/clientes" routerLinkActive="green" class="list-item" >
+                <mat-icon class="icon">face</mat-icon>
+                Clientes
+            </a>
+        </mat-list-item>
+        <mat-list-item>
+            <a routerLink="/favoritos" routerLinkActive="green" class="list-item" >
+                <mat-icon class="icon">favorite</mat-icon>
+                Favoritos
             </a>
         </mat-list-item>
         
