--- a/frontend/src/app/components/clientes/cliente-read/cliente-read.component.html
+++ b/frontend/src/app/components/clientes/cliente-read/cliente-read.component.html
@@ -1,28 +1,47 @@
+<button mat-raised-button (click)="click()">
+    Adicionar Cliente
+</button>
+
+
+
 <table mat-table [dataSource]="clientes" class="mat-elevation-z4">
 
     <ng-container matColumnDef="cpf">
         <th mat-header-cell *matHeaderCellDef> Cpf </th>
         <td mat-cell *matCellDef="let element"> {{element.cpf}} </td>
     </ng-container>
+
     <ng-container matColumnDef="nome">
         <th mat-header-cell *matHeaderCellDef> Nome </th>
         <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
     </ng-container>
+
     <ng-container matColumnDef="sexo">
         <th mat-header-cell *matHeaderCellDef> Sexo </th>
         <td mat-cell *matCellDef="let element"> {{element.sexo}} </td>
     </ng-container>
+
     <ng-container matColumnDef="dat_nasc">
         <th mat-header-cell *matHeaderCellDef> Data de Nascimento </th>
         <td mat-cell *matCellDef="let element"> {{element.dat_nasc}} </td>
     </ng-container>
+
     <ng-container matColumnDef="email">
         <th mat-header-cell *matHeaderCellDef> E-mail </th>
         <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
+
     <ng-container matColumnDef="phone">
         <th mat-header-cell *matHeaderCellDef> Telefone </th>
         <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> Ação </th>
+        <td mat-cell *matCellDef="let element">
+            <mat-icon>edit</mat-icon>
+            <mat-icon>delete</mat-icon>
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
