--- a/frontend/src/app/components/clientes/cliente-read/cliente-read.component.html
+++ b/frontend/src/app/components/clientes/cliente-read/cliente-read.component.html
@@ -39,8 +39,13 @@
     <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> Ação </th>
         <td mat-cell *matCellDef="let element">
-            <mat-icon>edit</mat-icon>
-            <mat-icon>delete</mat-icon>
+            <a routerLink="/clientes/update/{{ element.id }}" class="edit">
+                <mat-icon>edit</mat-icon>
+            </a>
+            <a routerLink="/clientes/delete/{{ element.id }}" class="delete">
+                <mat-icon>delete</mat-icon>
+            </a>
+            
         </td>
     </ng-container>
 
