--- a/frontend/src/app/components/clientes/cliente-update/cliente-update.component.html
+++ b/frontend/src/app/components/clientes/cliente-update/cliente-update.component.html
@@ -1,1 +1,36 @@
-<p>cliente-update works!</p>
+<mat-card>
+    <mat-card-title> Editar Cliente</mat-card-title>
+    <form>
+
+        <mat-form-field>
+            <input matInput placeholder="Cpf" [(ngModel)]="cliente.cpf" name="cpf">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Nome" [(ngModel)]="cliente.nome" name="nome">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Sexo" [(ngModel)]="cliente.sexo" name="sexo">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Data de Nascimento" [(ngModel)]="cliente.dat_nasc" name="dat_nasc">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="E-mail" [(ngModel)]="cliente.email" name="email">
+        </mat-form-field>
+
+        <mat-form-field>
+            <input matInput placeholder="Telefone" [(ngModel)]="cliente.phone" name="phone">
+        </mat-form-field>
+
+    </form>
+    <button mat-raised-button color="primary" (click)="salvar()">
+        Salvar
+    </button>
+    <button mat-raised-button (click)="cancelar()">
+        Cancelar
+    </button>
+</mat-card>
