--- a/frontend/src/app/components/clientes/cliente-read/cliente-read.component.html
+++ b/frontend/src/app/components/clientes/cliente-read/cliente-read.component.html
@@ -37,17 +37,20 @@
     </ng-container>
 
     <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef> Ação </th>
+        <th mat-header-cell *matHeaderCellDef> Ações </th>
         <td mat-cell *matCellDef="let element">
             <a routerLink="/clientes/update/{{ element.id }}" class="edit">
                 <mat-icon>edit</mat-icon>
             </a>
-            <a routerLink="/clientes/delete/{{ element.id }}" class="delete">
+            <!--<a routerLink="/clientes/delete/{{ element.id }}" class="delete">
+                <mat-icon>delete</mat-icon>
+            </a>-->
+            <a  (click)="openDialog(element)" class="pointer delete">
                 <mat-icon>delete</mat-icon>
             </a>
             <a (click)="toggleFavorite(element)">
-                <mat-icon class="favorite" *ngIf="!element.favorite">favorite_border</mat-icon>
-                <mat-icon class="favorite" *ngIf="element.favorite">favorite</mat-icon>
+                <mat-icon class="pointer" *ngIf="!element.favorite">favorite_border</mat-icon>
+                <mat-icon class="pointer" *ngIf="element.favorite">favorite</mat-icon>
             </a>
         </td>
     </ng-container>
