Adição de conteúdo a view home.

--- a/frontend/src/app/components/views/home/home.component.html
+++ b/frontend/src/app/components/views/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<mat-card>
+    <mat-card-title><h1>Bem Vindo!</h1></mat-card-title>
+    <mat-card-content>
+        <h3>Este é um sistema crud desenvolvido por Carlos Gabriel Santos de Melo para a a prova técnica da ma9.</h3>
+        <h4>Funcionalidades do sistema:
+            <ul>
+                <li>Cadastro de clientes ao servidor através do botão Adicionar cliente na aba clientes</li>
+                <li>Edição dos dados dos clientes</li>
+                <li>Remoção de clientes, acompanhado de um pop-up de confirmação</li>
+                <li>Opção para adiconar clientes a uma lista de favoritos, sendo possível também remove-los através de um click</li>
+                <li>Destaque de qual funcionalidade esta sendo usada atualmente através de uma mudança na cor dos ícones</li>
+            </ul>
+        </h4>
+        Muito obrigado por checar meu sistema, me diverti e aprendi muito fazendo ele ;)
+    </mat-card-content>
+</mat-card>
