Correção de texto no campo select do sexo.

--- a/frontend/src/app/components/clientes/cliente-create/cliente-create.component.html
+++ b/frontend/src/app/components/clientes/cliente-create/cliente-create.component.html
@@ -11,7 +11,7 @@
         </mat-form-field>
 
         <mat-form-field>
-            <mat-label>Select an option</mat-label>
+            <mat-label>Escolha o sexo</mat-label>
             <mat-select [(value)]="cliente.sexo">
                 <mat-option value="M">M</mat-option>
                 <mat-option value="F">F</mat-option>
