--- a/frontend/src/app/components/clientes/cliente-create/cliente-create.component.html
+++ b/frontend/src/app/components/clientes/cliente-create/cliente-create.component.html
@@ -19,11 +19,16 @@
         </mat-form-field>
 
         <mat-form-field>
-            <input matInput placeholder="Data de Nascimento" [(ngModel)]="cliente.dat_nasc" name="dat_nasc">
+            <input matInput [matDatepicker]="picker" placeholder="Data de Nascimento" [(ngModel)]="cliente.dat_nasc"
+                name="dat_nasc">
+            <mat-datepicker-toggle matSuffix [for]="picker">
+            </mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
 
         <mat-form-field>
-            <input matInput placeholder="E-mail" [(ngModel)]="cliente.email" name="email">
+            <input matInput type="email" placeholder="E-mail" [(ngModel)]="cliente.email" name="email">
+
         </mat-form-field>
 
         <mat-form-field>
