bugFix no datasource da tabela de favoritos.

--- a/frontend/src/app/components/views/favoritos/favoritos.component.html
+++ b/frontend/src/app/components/views/favoritos/favoritos.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="clientes" class="mat-elevation-z4">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z4">
 
     <ng-container matColumnDef="cpf">
         <th mat-header-cell *matHeaderCellDef> Cpf </th>
